Closed Bug 513848 Opened 15 years ago Closed 15 years ago

nsHTMLTableCellAccessible is used in dojo's crazy ARIA grid

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta2-fixed

People

(Reporter: surkov, Assigned: surkov)

References

(Blocks 2 open bugs, )

Details

(Keywords: access, verified1.9.2)

Attachments

(1 file)

Simple example would be

<div role="grid">
  <div role="row">
    <table role="presentation">
      <tr>
        <td role="gridcell">cell1</td><td role="gridcell">cell1</td>
      </tr>
    </table>
  </div>
</div>
Is the problem here that we are not respecting the role="presentation"?
Sort of, it depends on how to treat your question :) accesibles have ARIA role so we don't test table structure at all and tests failed when we decide if we should use ARIA table specific accessible classes.
Can you explain the bug in a little more detail? :)
We should create nsARIAGridCellAccessible for HTML td elements under HTML table which is presentational because all HTML table accessible classes are intendent to work with HTML table frame methods. And this doesn't make sense because obviously HTML table with role="presentation" is different thing than dojo grid.
Blocks: tablea11y
Attached patch patchSplinter Review
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #400238 - Flags: review?(marco.zehe)
Attachment #400238 - Flags: review?(bolterbugz)
Attachment #400238 - Flags: review?(bolterbugz) → review+
Comment on attachment 400238 [details] [diff] [review]
patch

r=me thanks, with nits:

> #ifdef DEBUG
>-            nsRoleMapEntry *tableRoleMapEntry =
>-              nsAccUtils::GetRoleMapEntry(tableNode);
>-            NS_ASSERTION(tableRoleMapEntry &&
>-                         !nsCRT::strcmp(tableRoleMapEntry->roleString, "presentation"),
>-                         "No accessible for parent table and it didn't have role of presentation");
>+          nsRoleMapEntry *tableRoleMapEntry =
>+            nsAccUtils::GetRoleMapEntry(tableNode);
>+          NS_ASSERTION(tableRoleMapEntry &&
>+                       !nsCRT::strcmp(tableRoleMapEntry->roleString, "presentation"),
>+                       "No accessible for parent table and it didn't have role of presentation");
> #endif

I'd prefer to leave this minor formatting change out (since it messes up the hg annotations).


>+          if (!roleMapEntry && !content->IsFocusable()) {
>+            // Table-related descendants of presentation table are also
>+            // presentation if they aren't focusable and have not explict ARIA

Nit: "have no explicit"
(In reply to comment #6)

> I'd prefer to leave this minor formatting change out (since it messes up the hg
> annotations).

they have different indenting.
Attachment #400238 - Flags: review?(marco.zehe) → review+
Comment on attachment 400238 [details] [diff] [review]
patch

r=me thanks! No further nits than what David said.
(In reply to comment #7)
> (In reply to comment #6)
> 
> > I'd prefer to leave this minor formatting change out (since it messes up the hg
> > annotations).
> 
> they have different indenting.

If hunting down the blame/credit (annotation) could go deeper than 1 level I wouldn't care :)  But I rely on it a lot.
(In reply to comment #9)

> If hunting down the blame/credit (annotation) could go deeper than 1 level I
> wouldn't care :)  But I rely on it a lot.

usually hunting down is always deeper than 1 :) but it sounds it didn't catch your idea.
landed on 1.9.3 - http://hg.mozilla.org/mozilla-central/rev/00bc9fd43693
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Flags: in-testsuite+
Alexander, Marco, do we want to try and squeeze this into 1.9.2?
We could. However we weren't in time to introduce all table related changes in 1.9.2 and continued the work in 1.9.3 (including IA2 table2 interface support which is the major landmark). We can think we just are faced to the fact: Firefox 3.6 is not entirely accessible from point of view of table work.

However if we'll land this then we could improve table navigation methods for dojo grids I think. This might be worth.
Comment on attachment 400238 [details] [diff] [review]
patch

This has been baking on m-c for a while without causing regressions. Needed for completion of a11y support for tables in 3.6. See https://wiki.mozilla.org/Accessibility/Remaining_Mozilla-1.9.2_Nominations for more info.
Attachment #400238 - Flags: approval1.9.2?
Attachment #400238 - Flags: approval1.9.2? → approval1.9.2+
Verified fixed in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2b2pre) Gecko/20091029 Namoroka/3.6b2pre (.NET CLR 3.5.30729)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: