Bug 513848 - nsHTMLTableCellAccessible is used in dojo's crazy ARIA grid, r=marcoz, davidb